objects/Shipment_Internal__c.object
<CustomObject>
    <description>The main shipment object.(Header).</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipment</relationshipLabel>
        <relationshipName>Shipments_Internal</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Bill_Lading__c</fullName>
        <label>Bill of Lading</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_PRO_URL__c</fullName>
        <label>CARRIER Tracking Web  Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Carrier_PRO__c</fullName>
        <label>Carrier tracking #</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_Code__c</fullName>
        <label>Co Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Date__c</fullName>
        <label>Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>SAP Sold To</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETA__c</fullName>
        <description>Estimated time of arrival</description>
        <label>Estimated time of arrival</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ETD__c</fullName>
        <description>Estimated time of departure</description>
        <label>Estimated time of departure</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flight_No__c</fullName>
        <label>Flight Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_INCO1__c</fullName>
        <label>Intl. C of C terms GLOBAL_INCO1</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_INCO2__c</fullName>
        <label>GLOBAL INCO2</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gidate_Date__c</fullName>
        <label>Gidate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gross_Weight__c</fullName>
        <label>Gross Weight</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Date__c</fullName>
        <label>Last Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_Date__c</fullName>
        <label>Legacy Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loading_Point__c</fullName>
        <label>Loading Point</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mawb__c</fullName>
        <label>Master Way Bill</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Containers__c</fullName>
        <label>Number of Containers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OEMPN__c</fullName>
        <label>OEMPN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PARTDESC__c</fullName>
        <label>PARTDESC</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pack_Slip_Num__c</fullName>
        <label>Packing List Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_Desc__c</fullName>
        <label>Route Desc</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <label>Route</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIP_START_DT__c</fullName>
        <label>Shipment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scac_Code__c</fullName>
        <label>Scac Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Point__c</fullName>
        <label>Ship Point</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Arrive_Date__c</fullName>
        <description>Arrival date of shipment</description>
        <label>Shipment Arrive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipment_Date__c</fullName>
        <label>Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipment_ID__c</fullName>
        <description>This is repeated as salesforce has its own id, still including as we can make amendments</description>
        <externalId>true</externalId>
        <label>Shipment ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Shipment_Time__c</fullName>
        <label>Shipment Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shipment_Type__c</fullName>
        <label>Shipment Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech__c</fullName>
        <label>Tech</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transp_Type__c</fullName>
        <label>Transp Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight_UOM__c</fullName>
        <label>Weight UOM</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Shipment (Internal)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipments (Internal)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>